Prevent scrollbar during pjax animations
Reported by @lionelB
https://twitter.com/b_lionel/status/448005639680569344

--- a/src/assets/_styles/moox.scss
+++ b/src/assets/_styles/moox.scss
@@ -74,6 +74,7 @@ body {
   // to make the footer at the bottom of the viewport
   position: relative;
   min-height: 100%;
+  overflow-x: hidden; // prevent scrollbar during pjax animations
 
   @include crp-Media-m {
     // footer is absolute, keep some place for it
